--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
+
+
 # Remove when sharing with others.
-list(APPEND CMAKE_PREFIX_PATH "/home/boris/Qt/Tools/QtCreator/dev/lib/cmake/QtCreator")
+list(APPEND CMAKE_PREFIX_PATH "/home/viktor/Qt/Tools/QtCreator/dev/lib/cmake/QtCreator")
 
 project(Hello)
 
@@ -9,6 +11,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD 20)
+
+
 
 find_package(QtCreator COMPONENTS Core ProjectExplorer REQUIRED)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
@@ -38,7 +42,9 @@ add_qtc_plugin(Hello
     src/buildsystem.cpp
     src/buildsystem.h
     src/jprojfileparser.cpp
-    src/jprojfileparser.cpp
+    src/jprojfileparser.h
+    src/runconfiguration.cpp
+    src/runconfiguration.h
 )
 
 target_link_libraries(Hello
